# nlp_fastapi_spacy_ner

./: README.md  pyproject.toml
src/: main.py  models.py
